--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/d3": "^7.4.3",
+    "@types/prismjs": "^1.26.5",
     "chrono-node": "^2.8.4",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
@@ -19,6 +20,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "phosphor-react": "^1.4.1",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "together-ai": "^0.16.0"
