--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/d3": "^7.4.3",
+    "@types/jspdf": "^1.3.3",
     "@types/prismjs": "^1.26.5",
     "chrono-node": "^2.8.4",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
     "phosphor-react": "^1.4.1",
     "prismjs": "^1.30.0",
